______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.0.0 BETA 11:

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.0.0 BETA 10:

* Generated CAPI classes:
  - Fixed SF.net bug #1060230: The method 'getDataElement()' in
    <FunctionName>Result classes has been removed. Use the 'dataElement()'
    method instead, which was introduced in XINS 1.0.0-beta9.
    WARNING: This may (and is expected to) break existing code.

* XINS/Java Client Framework:
  - Added getChildren(String) to class DataElement.
  - Various other improvements to DataElement class.

* Tests:
  - Changed max queue time-out in ExpiryFolderTests from 10 ms to 2 sec.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.0.0 BETA 9:

* Generated CAPI classes:
  - The method 'getDataElement()' in <FunctionName>Result classes has been
    renamed to 'dataElement()' to avoid a clash with a generated method for an
    output parameter named 'dataElement'.
    The 'getDataElement()' method is marked as deprecated and is planned to be
    removed before XINS 1.0.0-rc1. As soon as this method is removed, SF.net
    bug #1060230 is resolved.
    WARNING: When the getDataElement() method is removed, this may break
    existing code.

______________________________________________________________________________
CHANGES INTRODUCED IN XINS 1.0.0 BETA 8:

* XINS/Java Server Framework:
  - Added log message for an unexpected exception.

* XINS/Java Client Framework:
  - Improved logging.
  - Added log message for an unexpected exception.
  - Added missing translations for some log messages.

* XINS/Java Common Library:
  - Added log message for an unexpected exception.
  - Added 'detail' property to ParseException class.
  - Added getter for 'detail' property in CallException class.

* Generated CAPI classes: